--- a/Trainer-frontend/src/app/components/app.component.html
+++ b/Trainer-frontend/src/app/components/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<mat-toolbar>
+  <span>Trainings App</span>
+</mat-toolbar>
+<div>
+  <router-outlet></router-outlet>
+</div>
